apps/tautulli/tautulli-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-svc
  namespace: plex
  labels:
    app-name: tautulli
    version: "${TAUTULLI_VERSION}"
    component: plex-analysis-server
    hostNetwork: "yes"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  type: ClusterIP
  ports:
    - name: tautulli
      port: 8181
      protocol: TCP
      targetPort: 8181
  selector:
    app-name: tautulli
